# httpx_auth

./: .pre-commit-config.yaml  .travis.yml  AWS4AUTH.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml  test.yml
httpx_auth/: __init__.py  _authentication.py  _errors.py  authentication.py  aws.py  aws4auth.py  errors.py  negotiate.py  oauth2_authentication_responses_server.py  oauth2_tokens.py  testing.py  version.py
httpx_auth/_oauth2/: authentication_responses_server.py  authorization_code.py  authorization_code_pkce.py  browser.py  client_credentials.py  common.py  implicit.py  resource_owner_password.py  tokens.py
tests/: auth_helper.py  test_add_operator.py  test_and_operator.py  test_api_key.py  test_auths.py  test_aws4auth.py  test_basic.py  test_json_token_file_cache.py  test_ntlm.py  test_oauth2_authorization_code.py  test_oauth2_authorization_code_okta.py  test_oauth2_authorization_code_pkce.py  test_oauth2_authorization_code_pkce_okta.py  test_oauth2_authorization_code_wakatime.py  test_oauth2_client_credential.py  test_oauth2_client_credential_okta.py  test_oauth2_implicit.py  test_oauth2_implicit_id_token_azure_active_directory.py  test_oauth2_implicit_id_token_okta.py  test_oauth2_resource_owner_password.py  test_oauth2_resource_owner_password_okta.py  test_temporary.py  test_testing_oauth2_authorization_code.py  test_testing_oauth2_implicit.py  test_testing_token_mock.py
tests/api_key/: test_api_key.py  test_api_key_async.py  test_api_key_sync.py
tests/aws_signature_v4/: test_aws4auth.py  test_aws4auth_async.py  test_aws4auth_sync.py
tests/basic_auth/: test_basic_async.py  test_basic_sync.py
tests/features/multi_auth/: test_add_operator_async.py  test_add_operator_sync.py  test_and_operator.py  test_and_operator_async.py  test_and_operator_sync.py
tests/features/pytest_fixture/: test_testing_token_mock_async.py  test_testing_token_mock_sync.py
tests/features/token_cache/: test_json_token_file_cache.py
tests/features/token_cache/authorization_code/: test_testing_oauth2_authorization_code_async.py  test_testing_oauth2_authorization_code_sync.py
tests/features/token_cache/implicit/: test_testing_oauth2_implicit_async.py  test_testing_oauth2_implicit_sync.py
tests/oauth2/authorization_code/: test_oauth2_authorization_code.py  test_oauth2_authorization_code_async.py  test_oauth2_authorization_code_sync.py
tests/oauth2/authorization_code/okta/: test_oauth2_authorization_code_okta.py  test_oauth2_authorization_code_okta_async.py  test_oauth2_authorization_code_okta_sync.py
tests/oauth2/authorization_code/wakatime/: test_oauth2_authorization_code_wakatime.py  test_oauth2_authorization_code_wakatime_async.py  test_oauth2_authorization_code_wakatime_sync.py
tests/oauth2/authorization_code_pkce/: conftest.py  test_oauth2_authorization_code_pkce.py  test_oauth2_authorization_code_pkce_async.py  test_oauth2_authorization_code_pkce_sync.py
tests/oauth2/authorization_code_pkce/okta/: test_oauth2_authorization_code_pkce_okta.py  test_oauth2_authorization_code_pkce_okta_async.py  test_oauth2_authorization_code_pkce_okta_sync.py
tests/oauth2/client_credential/: test_oauth2_client_credential.py  test_oauth2_client_credential_async.py  test_oauth2_client_credential_sync.py
tests/oauth2/client_credential/okta/: test_oauth2_client_credential_okta.py  (+2 more)
tests/oauth2/implicit/: test_oauth2_implicit.py  test_oauth2_implicit_async.py  test_oauth2_implicit_sync.py  test_testing_oauth2_implicit.py
tests/oauth2/resource_owner_password/: test_oauth2_resource_owner_password.py  test_oauth2_resource_owner_password_async.py  test_oauth2_resource_owner_password_sync.py
tests/oauth2/tokens/: test_tokens.py
(+7 files in other folders)
